--- a/homework.html
+++ b/homework.html
@@ -74,9 +74,7 @@
 
     <button onclick="toggleVisibility()">Кликните сюда, чтобы узнать меня подробнее</button>
     <div id="hiddenDiv" class="option">
-        <p>Привет! Я Миркин Егор Ярославович, начинающий программист с огромным интересом к технологиям и разработке. Несмотря на отсутствие опыта работы, я активно изучаю современные языки программирования, такие как Java, JavaScript и C++. Постоянно развиваю свои навыки и стремлюсь к созданию качественного программного обеспечения.</p>
-        <p>Мои сильные стороны: аналитическое мышление, быстрая обучаемость и умение решать сложные задачи. Кроме программирования, увлекаюсь созданием игровых проектов и изучением архитектуры приложений. В свободное время люблю читать книги по разработке ПО и участвовать в хакатонах.</p>
-        <p>Моя цель — стать профессионалом в области разработки и внести вклад в создание инновационных технологий. Я открыт для новых возможностей и готов к любым вызовам!</p>
+        <p>Привет! Я Миркин Егор Ярославович, я гений и все.</p>
     </div>
     
 
